--- a/deployment.yml
+++ b/deployment.yml
@@ -1,23 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-   name: nginx-prod-deploy
-   labels:
-     app : nginx-app-prod
+    name: gamutkart-deploy
+    labels:
+      app: gamutkart-app
 spec:
-  replicas: 3
+  replicas: 2
   selector:
-     matchLabels:
-         app: nginx-pod
+    matchLabels:
+      app: gamutkart-app
   template:
-     metadata:
-       labels:
-         app: nginx-pod
-     spec:
-       containers:
-         - image: nginx
-           name:  nginx
-           ports:
-           - containerPort: 80
+    metadata:
+      labels:
+        app: gamutkart-app
+    spec:
+      containers:
+        - name: gamutkart-container
+          image: nageshvkn/gamutkart-img
+          ports:
+          - containerPort: 8080
+          command: ["/bin/sh"]
+          args:  ["-c", "/root/apache-tomcat-8.5.38/bin/startup.sh; while true; do sleep 1; done;"]
          
          
